--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,8 @@ layout: default
                     <img src="{{ "/images/posts/" | append: page.banner_image | prepend: site.baseurl }}"
                         alt="{% if page.banner_image_alt %}{{ page.banner_image_alt }}{% else %}{{ page.title }}{% endif %}">
                 </div>
+                <!-- <meta property="og:image" content="{{ site.url }}/{{ page.banner_image }}" />` -->
+
                 {% endif %}
                 <h1 class="post-title outer">{{page.title}}</h1>
             </div>
