--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% if page.banner_image %}
-    <meta property="og:image" content="{{site.baseurl}}/{{ "images/posts/" }}{{ page.banner_image }}" />
+    <meta property="og:image" content="{{site.url}}/{{ "images/posts/" }}{{ page.banner_image }}" />
     {% endif %}    
     <link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i&display=swap" />
