--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,4 +32,12 @@
     {% endif %}
     <script src="{{ site.baseurl }}/js/scripts.js"></script>
 </body>
+<script type="text/javascript" src="//wcs.naver.net/wcslog.js"></script>
+<script type="text/javascript">
+if(!wcs_add) var wcs_add = {};
+wcs_add["wa"] = "afac63bd597b2";
+if(window.wcs) {
+  wcs_do();
+}
+</script>
 </html>
