--- a/_sass/_structure.scss
+++ b/_sass/_structure.scss
@@ -45,6 +45,7 @@
 .sidebar {
     font-size: 0.88889em;
     margin-bottom: 3.33333em;
+    color: #fff;
 }
 
 @media only screen and (min-width: 501px) {
